--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.port = 8100
 #spring.datasource.username=root
 #spring.datasource.password=1234
 
-#spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:grace_bakery}
-#spring.datasource.username=${DB_USER:root}
-#spring.datasource.password=${DB_PASS:1234}
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:grace_bakery}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASS:1234}
 
 
 #spring.datasource.url=jdbc:mysql://db-mysql-fra1-77849-do-user-16395802-0.c.db.ondigitalocean.com:25060/grace_bakery
