--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,25 +4,15 @@ server.port = 8100
 
 #MySQL by Docker
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/grace_bakery
-#spring.datasource.username=root
-#spring.datasource.password=1234
-
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:grace_bakery}
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASS:1234}
-
-
-#spring.datasource.url=jdbc:mysql://db-mysql-fra1-77849-do-user-16395802-0.c.db.ondigitalocean.com:25060/grace_bakery
-#spring.datasource.username=doadmin
-#spring.datasource.password=AVNS_YxyDzDFIgabXC9GxJXL
-
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
-
+spring.web.resources.static-locations=file:${user.dir}/resources/images/
 
 #JPA Hibernate
 spring.jpa.hibernate.ddl-auto=update
