--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
-spring.web.resources.static-locations=file:${user.dir}/resources/images/
+spring.web.resources.static-locations=file:${user.dir}/resources/
 
 #JPA Hibernate
 spring.jpa.hibernate.ddl-auto=update
