--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
 spring.web.resources.static-locations=file:/home/
+spring.web.resources.cache.period=0
 
 #JPA Hibernate
 spring.jpa.hibernate.ddl-auto=update
