--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
+
+cloudinary.cloud-name=dspmovi5z
+cloudinary.api-key=935766987448766
+cloudinary.api-secret=kYm8OCKRrpounPIyZaLQwiSnXOY
+
+
