--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,20 @@ cloudinary.api-key=935766987448766
 cloudinary.api-secret=kYm8OCKRrpounPIyZaLQwiSnXOY
 
 
+
+
+
+
+
+
+# ????????? ???? ??????? ??????
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.region.factory_class=jcache
+spring.jpa.properties.hibernate.javax.cache.provider=org.ehcache.jsr107.EhcacheCachingProvider
+
+# ????????? ???? ????????
+spring.jpa.properties.hibernate.cache.use_query_cache=true
+
+# ????????? Ehcache
+spring.cache.type=jcache
+spring.cache.jcache.config=classpath:ehcache.xml
