--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,8 @@ spring.jpa.properties.hibernate.cache.use_query_cache=true
 
 spring.cache.type=jcache
 spring.cache.jcache.config=classpath:ehcache.xml
+
+spring.security.oauth2.client.registration.google.client-id=870773086085-089i069cgn9unuhglcdhbh5257ks0kie.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8100/api/user/oauth
