--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,7 @@ spring.security.oauth2.client.registration.google.client-id=870773086085-089i069
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8100/api/user/oauth
+
+springdoc.api-docs.path=/api/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.url=/api/v3/api-docs
